[package]
name = "mal"
version = "0.8.0"
authors = ["Acizza <jonathanmce@gmail.com>"]
description = "A library to interact with the MyAnimeList API."
repository = "https://github.com/Acizza/mal-rs"
readme = "README.md"
keywords = ["mal", "myanimelist", "anime"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
chrono      = "0.4"
failure     = "0.1"
lazy_static = "1.0"
minidom     = "0.9"
reqwest     = "0.8"

[features]
default = ["anime", "manga"]

anime = []
manga = []